--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/InventoryManagerRole/ManageVaccineOrdersJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/InventoryManagerRole/ManageVaccineOrdersJPanel.form
@@ -191,7 +191,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="0">
                 <Column editable="false" title="Vaccine Name" type="java.lang.Object"/>
-                <Column editable="false" title="BatchId" type="java.lang.Object"/>
+                <Column editable="false" title="BatchId" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
